[package]
name = "bungee"
version = "0.1.0"
authors = ["Лач <iam@lach.pw>"]
edition = "2018"

workspaces = ["derive-packetdata"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.7.1", features = ["full"]}
async-trait = "0.1.50"
byteorder = "1.4.3"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
derive-packetdata = {path = "./derive-packetdata"}
futures = "0.3.15"
quick-error = "2.0.1"
lazy_static = "1.4.0"
compress = "0.2.1"
log = "0.4.14"
fast-async-mutex = "0.6.7"

# Online-mode
rand = "0.8.4"
rsa = "0.4.0"
rsa-der = "0.2.1"
num-bigint-dig = "0.7.0"
md5 = "0.7.0"
sha1 = "0.6.0"
hex = "0.4.3"
uuid = {version = "0.8.2", features = ["v3"]}
reqwest = {version = "0.11.3", features = ["json"] }

impl-trait-for-tuples = "0.2.1"
thiserror = "1.0.25"
anyhow = "1.0.41"