[package]
name = "bungee"
version = "0.1.0"
authors = ["Лач <iam@lach.pw>"]
edition = "2018"

workspaces = ["derive-packetdata"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.7.1", features = ["full"]}
async-trait = "0.1.50"
byteorder = "1.4.3"
lazy_static="1.4.0"
serde = "1.0.126"
serde_json = "1.0.64"
derive-packetdata = {path = "./derive-packetdata"}
futures = "0.3.15"
log = "0.4.14"
fast-async-mutex = "0.6.7"
env_logger="0.8"

impl-trait-for-tuples = "0.2.1"
thiserror = "1.0.25"
anyhow = "1.0.41"

actix-web = "3"
nats = "0.16.0"
public-ip = "0.2.2"
